option java_package = "ralph_protobuffs";
option java_outer_classname = "DeltaProto";

message Delta
{
    enum ContainerOpType
    {
        DELETE = 0;
        ADD = 1;
        WRITE = 2;
        CLEAR = 3;
    }
    
    message ContainerDelta
    {
        required ContainerOpType op_type = 1;
        // note that for lists, keys can only be numbers
        required ValueType key = 2;
        // only necessary if added or wrote a field
        optional ReferenceType what_added_or_written = 3;
    }

    message ValueType
    {
        // value types for serialization.
        optional double num = 1;
        optional bool null_num = 2;
            
        optional string text = 3;
        optional bool null_text = 4;
        
        optional bool tf = 5;
        optional bool null_tf = 6;

    }

    message EnumDelta
    {
        required string enum_constructor_obj_class_name = 1;
        // -1 if holds null
        required int32 enum_ordinal = 2;
    }
    
    message ServiceFactoryDelta
    {
        required bytes serialized_factory = 1;
    }
    
    message ReferenceType
    {
        // nothing inside means that we should set reference to null.
        optional string reference = 1;
    }
    

    optional ValueType value = 1;
    optional ReferenceType reference = 2;
    
    // repeated because may transactionally perform multiple
    // operations on same container.
    repeated ContainerDelta container_delta = 3;
    
    optional EnumDelta enum_delta = 4;
    optional ServiceFactoryDelta service_factory_delta = 5;
}